Fix extra horizontal scrolling on Chrome mobile

--- a/styles/thymeleaf.less
+++ b/styles/thymeleaf.less
@@ -36,6 +36,7 @@ body {
 a {
 	color: blue;
 	text-decoration: none;
+	word-wrap: break-word;
 
 	&:hover {
 		text-decoration: underline;
@@ -224,6 +225,12 @@ figure {
 figcaption {
 	font-style: italic;
 	text-align: center;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	code {
+		word-wrap: break-word;
+	}
 }
 
 #setting-value-to-specific-attributes,
